--- a/index.html
+++ b/index.html
@@ -21,7 +21,25 @@
        <div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum, vel nihil corporis est rerum quaerat laboriosam temporibus velit illum voluptas consectetur officia rem placeat itaque cumque aperiam autem voluptates incidunt.</p>
        </div>
-
+       <!--CARD-->
+       <section>
+        <div class="row">
+            <div class="card">
+                <img src="img/male1.png" alt="Marco Bianchi">
+                <div>
+                 <h5 class="information"> Marco Bianchi</h5>
+                 <p  class="information"> Designer </p>>
+                 <a  class="information"> marcobianchi@team.com </a>                  
+                </div>
+            </div>
+            <div class="card">
+                
+            </div>
+            <div class="card">
+                
+            </div>
+        </div>
+       </section>
 
     </div>
 </body>
