--- a/index.html
+++ b/index.html
@@ -23,23 +23,62 @@
        </div>
        <!--CARD-->
        <section>
-        <div class="row">
-            <div class="card">
-                <img src="img/male1.png" alt="Marco Bianchi">
-                <div>
-                 <h5 class="information"> Marco Bianchi</h5>
-                 <p  class="information"> Designer </p>>
-                 <a  class="information"> marcobianchi@team.com </a>                  
+         <div class="row">
+              <div class="card clearfix">
+                 <img src="img/male1.png" alt="Marco Bianchi">
+                 <div class="information">
+                     <h4> Marco Bianchi</h4>
+                     <p> Designer </p>
+                      <a href="#"> marcobianchi@team.com </a>                  
+                  </div>
+             </div>
+             <div class="card clearfix">
+                  <img src="img/female1.png" alt="Laura Rossi">
+                  <div class="information">
+                      <h4> Laura Rossi</h4>
+                      <p> Front-end developer</p>
+                      <a href="#"> laurarossi@team.com </a>                  
+                 </div>
+             </div>
+             <div class="card clearfix">
+                  <img src="img/male2.png" alt="Giorgio Verdi">
+                  <div class="information">
+                      <h4> Giorgio Verdi</h4>
+                      <p> Back-end developer </p>
+                      <a href="#"> giorgioverdi@team.com </a>                  
+                  </div>
+             </div>
+          </div>
+      </section>
+      <section>
+          <div class="row">
+             <div class="card clearfix">
+                 <img src="img/female2.png" alt="Marta Ipsum">
+                 <div class="information">
+                     <h4> Marta Ipsum</h4>
+                     <p> SEO Specialist </p>
+                     <a href="#"> martaipsum@team.com </a>                  
+                 </div>
+             </div>
+             <div class="card clearfix">
+                <img src="img/male3.png" alt="Roberto Lorem">
+                <div class="information">
+                    <h4> Roberto Lorem </h4>
+                    <p> Project Manager </p>
+                    <a  href="#"> robertolorem@team.com </a>                  
                 </div>
             </div>
-            <div class="card">
-                
+            <div class="card clearfix">
+                <img src="img/female3.png" alt="Daniela Amet">
+                <div class="information">
+                    <h4> Daniela Amet</h4>
+                    <p> Analysy </p>
+                    <a href="#"> robertaamet@team.com </a>                  
+                </div>
             </div>
-            <div class="card">
-                
-            </div>
-        </div>
-       </section>
+          </div>
+    </section>
+
 
     </div>
 </body>
