--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
              </div>
           </div>
       </section>
+      <!--Seconda riga-->
       <section>
           <div class="row">
              <div class="card clearfix">
