--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        </div>
        <!--CARD-->
        <section>
-         <div class="row">
+         <div class="row clearfix">
               <div class="card clearfix">
                  <img src="img/male1.png" alt="Marco Bianchi">
                  <div class="information">
@@ -52,7 +52,7 @@
       </section>
       <!--Seconda riga-->
       <section>
-          <div class="row">
+          <div class="row clearfix">
              <div class="card clearfix">
                  <img src="img/female2.png" alt="Marta Ipsum">
                  <div class="information">
